Bug 1176829 - Remove custom elements base element queue. r=smaug

--HG--
extra : rebase_source : 27fb6a6d80575235dbd18f849cab5578a1dd6d14